--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PORT=8050 
-DB_URL=mongodb+srv://deepakkumar13204:Omg2cmRZoj0yqr4a@cluster0.t7cdsno.mongodb.net/?retryWrites=true&w=majority
+PORT=8000 
+DB_URL="mongodb+srv://deepakkumar13204:Deepak32561@cluster0.ueaos86.mongodb.net/?retryWrites=true&w=majority/blog"
