--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8000 
-DB_URL="mongodb+srv://deepakkumar13204:Deepak32561@cluster0.ueaos86.mongodb.net/?retryWrites=true&w=majority/blog"
+DB_URL="mongodb+srv://deepakkumar13204:iOySIopu1tzTNhOo@cluster0.fj1dofp.mongodb.net/?retryWrites=true&w=majority"
